# Inquisitor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  get_macs.sh  run_test.sh  setup.sh
src/: Inquisitor.cpp  Inquisitor.hpp  InquisitorFacade.cpp  InquisitorFacade.hpp  main.cpp
src/arp/: ArpPoisoner.cpp  ArpPoisoner.hpp
src/network/: PacketCapture.cpp  PacketCapture.hpp
src/protocol/: FtpParser.cpp  FtpParser.hpp
